Created individual modal pages for each message type & fixed canvas drawing bug

--- a/code/www/css/style.css
+++ b/code/www/css/style.css
@@ -2318,8 +2318,18 @@ div#scroller.ng-hide {
     width: 100%;
 }
 
+#ConnectionResponseOpenText div p{
+    font-size: 30px;
+    line-height: 30px;
+    padding-right: 5px;
+}
 
 #connectionResponseFooterButton {
     width: 97%;
     position: absolute;
+}
+
+#OpenMessageModalConnectionResponseAvatarImage{
+    float: left;
+    margin-right: 2px;
 }
