--- a/code/www/css/style.css
+++ b/code/www/css/style.css
@@ -854,6 +854,12 @@ input::placeholder{
     position: absolute;
     left:10px;
 }
+.shareCanvas{
+    position: absolute;
+    left:5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
 .profileName{
     position: relative;
     margin-top:25px;
@@ -1766,17 +1772,33 @@ div#scroller.ng-hide {
     font-weight: 300;
     line-height: 30px;
 }
+.shareWizardText{
+    text-align: center;
+    font-size: 25px;
+    padding-left: 10px;
+    font-weight: 300;
+    line-height: 30px;
+}
 .addToPlaylistTextDiv{
     padding-top: 25%;
 }
 .addToPlaylistList{
     height: 5%;
 }
+.shareList{
+    height: 50px;
+}
 .addToPlaylistListDiv{
     top: 12%;
     position: absolute;
     width: 100%;
     height: 72%;
+}
+.shareListDiv{
+    top: 88px;
+    position: absolute;
+    width: 100%;
+    height: auto;
 }
 .addToPlaylistNameText{
     padding: 10px;
@@ -2387,4 +2409,29 @@ div#scroller.ng-hide {
 #OpenMessageModalConnectionLostAvatarImage{
     float: left;
     margin-right: 2px;
+}
+.shareCheckbox{
+    margin-top: 10px !important;
+    height: 1.5rem;
+    width: 1.5rem;
+    position: absolute;
+    right: 5px;
+}
+.shareNames{
+    position: relative;
+    display: inline-block;
+    margin-left: 50px;
+    top: 5px;
+    padding: 10px;
+    font-size: 10px;
+    color: black !important;
+}
+.shareText{
+    overflow: auto;
+    white-space: normal;
+    left: 5px;
+    position: absolute;
+    text-align: center;
+    font-size: 20px;
+    top: 40px;
 }
