qrcode to high up

--- a/code/www/css/style.css
+++ b/code/www/css/style.css
@@ -1105,6 +1105,7 @@ input::placeholder{
     height: 70%;
   }
   .qrcode{
+    margin-top: 40px;
     border: 15px white solid;
     height: 95%;
   }
